--- a/index.html
+++ b/index.html
@@ -10,6 +10,47 @@
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>    
 </head>
 <body>
-    
+    <header>
+        <div id="app-row">
+            <div class="container clearfix">
+                <img id="logo" src="https://boc.lk/catalog/view/theme/default/images/new/boc-logo.jpg" alt="BoC Logo">
+                <div class="wrapper">
+                    <div class="row clearfix">
+                        <nav id="nav-lang" class="clearfix">
+                            <li><a href="http://www.boc.lk/sinhala/index.php">සිංහල</a></li>
+                            <li><a href="http://www.boc.lk/tamil/index.php">தமிழ்</a></li>
+                            <li><a href="http://www.boc.lk/index.php">English</a></li>
+                        </nav>
+                    </div>
+                    <div class="row clearfix">
+                        <nav id="main-nav" class="clearfix">
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="https://boc.lk/index.php?route=information/information&information_id=4">About Us</a></li>
+                            <li><a href="https://boc.lk/index.php?route=information/ournetwork">Network</a></li>
+                            <li><a href="https://boc.lk/index.php?route=product/category&path=225_429&catid=429">Sustainability</a></li>
+                            <li><a href="https://boc.lk/index.php?route=product/category&path=422_416&catid=416">Banking Museum</a></li>
+                            <li><a href="https://boc.lk/index.php?route=information/contact">Contact</a></li>
+                        </nav>
+                        <div id="smi-container">
+                            <ul class="clearfix">
+                                <li><a href="https://www.facebook.com/Bank-of-Ceylon-SmartGen-952516204823722/info/?tab=page_info"><ion-icon name="logo-facebook"></ion-icon></a></li>
+                                <li><a href="https://twitter.com/boc_smartgen"><ion-icon name="logo-twitter"></ion-icon></a></li>
+                                <li><a href="https://www.linkedin.com/company/bank-of-ceylon"><ion-icon name="logo-linkedin"></ion-icon></a></li>
+                                <li><a href="https://www.youtube.com/channel/UC15IN8WsPTdisjUnXexAtOA"><ion-icon name="logo-youtube"></ion-icon></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="nav-row">
+            <div class="container">Row2</div>
+        </div>
+        <div id="misc-row">
+            <div class="container">Row3</div>
+        </div>
+    </header>
+    <main></main>
+    <footer></footer>
 </body>
 </html>
