--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +8,9 @@
     <link rel="stylesheet" href="css/home.css">
     <link rel="icon" href="https://boc.lk/catalog/view/theme/default/images/favicon.ico">
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>    
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </head>
+
 <body>
     <header>
         <div id="app-row">
@@ -25,18 +27,31 @@
                     <div class="row clearfix">
                         <nav id="main-nav" class="clearfix">
                             <li><a href="index.html">Home</a></li>
-                            <li><a href="https://boc.lk/index.php?route=information/information&information_id=4">About Us</a></li>
+                            <li><a href="https://boc.lk/index.php?route=information/information&information_id=4">About
+                                    Us</a></li>
                             <li><a href="https://boc.lk/index.php?route=information/ournetwork">Network</a></li>
-                            <li><a href="https://boc.lk/index.php?route=product/category&path=225_429&catid=429">Sustainability</a></li>
-                            <li><a href="https://boc.lk/index.php?route=product/category&path=422_416&catid=416">Banking Museum</a></li>
+                            <li><a
+                                    href="https://boc.lk/index.php?route=product/category&path=225_429&catid=429">Sustainability</a>
+                            </li>
+                            <li><a href="https://boc.lk/index.php?route=product/category&path=422_416&catid=416">Banking
+                                    Museum</a></li>
                             <li><a href="https://boc.lk/index.php?route=information/contact">Contact</a></li>
                         </nav>
                         <div id="smi-container">
                             <ul class="clearfix">
-                                <li><a href="https://www.facebook.com/Bank-of-Ceylon-SmartGen-952516204823722/info/?tab=page_info"><ion-icon name="logo-facebook"></ion-icon></a></li>
-                                <li><a href="https://twitter.com/boc_smartgen"><ion-icon name="logo-twitter"></ion-icon></a></li>
-                                <li><a href="https://www.linkedin.com/company/bank-of-ceylon"><ion-icon name="logo-linkedin"></ion-icon></a></li>
-                                <li><a href="https://www.youtube.com/channel/UC15IN8WsPTdisjUnXexAtOA"><ion-icon name="logo-youtube"></ion-icon></a></li>
+                                <li><a
+                                        href="https://www.facebook.com/Bank-of-Ceylon-SmartGen-952516204823722/info/?tab=page_info">
+                                        <ion-icon name="logo-facebook"></ion-icon>
+                                    </a></li>
+                                <li><a href="https://twitter.com/boc_smartgen">
+                                        <ion-icon name="logo-twitter"></ion-icon>
+                                    </a></li>
+                                <li><a href="https://www.linkedin.com/company/bank-of-ceylon">
+                                        <ion-icon name="logo-linkedin"></ion-icon>
+                                    </a></li>
+                                <li><a href="https://www.youtube.com/channel/UC15IN8WsPTdisjUnXexAtOA">
+                                        <ion-icon name="logo-youtube"></ion-icon>
+                                    </a></li>
                             </ul>
                         </div>
                     </div>
@@ -48,9 +63,12 @@
                 <nav class="clearfix">
                     <li><a href="https://boc.lk/index.php?route=product/category&path=87_88_227">Personal</a></li>
                     <li><a href="https://boc.lk/index.php?route=product/category&path=185_186_187">Corporate</a></li>
-                    <li><a href="https://boc.lk/index.php?route=product/category&path=127_128_129">Development Banking</a></li>
-                    <li><a href="https://boc.lk/index.php?route=product/category&path=169_170_252">Treasury & Investment</a></li>
-                    <li><a href="https://boc.lk/index.php?route=product/category&path=217_210_228">International</a></li>
+                    <li><a href="https://boc.lk/index.php?route=product/category&path=127_128_129">Development
+                            Banking</a></li>
+                    <li><a href="https://boc.lk/index.php?route=product/category&path=169_170_252">Treasury &
+                            Investment</a></li>
+                    <li><a href="https://boc.lk/index.php?route=product/category&path=217_210_228">International</a>
+                    </li>
                     <li><a href="https://boc.lk/index.php?route=news/careers">Careers</a></li>
                     <li><a href="https://boc.lk/index.php?route=news/latest">Latest News</a></li>
                 </nav>
@@ -64,6 +82,109 @@
         </div>
     </header>
     <main></main>
-    <footer></footer>
+    <footer>
+        <div class="row">
+            <div class="container clearfix">
+                <div class="col">
+                    <h3>About Us</h3>
+                    <nav>
+                        <li>
+                            <a href="index.php?route=information/information&amp;information_id=15">Bank Profile</a>
+                        </li>
+                        <li>
+                            <a href="index.php?route=information/information&amp;information_id=18">Corporate
+                                Profile</a>
+                        </li>
+                        <li>
+                            <a href="index.php?route=information/information&amp;information_id=93">Subsidiaries</a>
+                        </li>
+                        <li>
+                            <a href="index.php?route=information/information&amp;information_id=25">Financial
+                                Highlights</a>
+                        </li>
+                        <li>
+                            <a href="index.php?route=information/information&amp;information_id=26">HR/Careers</a>
+                        </li>
+                        <li>
+                            <a href="index.php?route=information/information&amp;information_id=94">Sustainability</a>
+                        </li>
+                    </nav>
+                </div>
+                <div class="col">
+                    <h3>Banking</h3>
+                    <nav>
+                        <li>
+                            <a href="index.php?route=information/information&amp;information_id=74">Premier Banking</a>
+                        </li>
+                        <li>
+                            <a href="index.php?route=information/ournetwork">Branch Network</a>
+                        </li>
+                        <li>
+                            <a href="index.php?route=banking/saturday">Saturday Banking</a>
+                        </li>
+                        <li>
+                            <a href="index.php?route=banking/sunday">Sunday Banking</a>
+                        </li>
+                        <li>
+                            <a href="index.php?route=information/information&amp;information_id=108">24 Hour Banking</a>
+                        </li>
+                        <li>
+                            <a href="index.php?route=information/information&amp;information_id=119">365 Day Banking</a>
+                        </li>
+                    </nav>
+                </div>
+                <div class="col">
+                    <h3>Special Notices</h3>
+                    <nav>
+                        <li>
+                            <a href="index.php?route=galleries/galleries">Image Gallery</a>
+                        </li>
+                        <li>
+                            <a href="index.php?route=information/information&amp;information_id=107">Tender Notices</a>
+                        </li>
+                        <!--<li><a href="#">Procurement Notices</a></li>-->
+                        <li>
+                            <a href="index.php?route=properties/vehicles">Vehicles for Sale</a>
+                        </li>
+                        <!--<li>
+            <a href="index.php?route=information/information&information_id=106">Properties for Sale</a>
+            </li> -->
+                        <li>
+                            <a href="index.php?route=properties/prime">Properties for Sale</a>
+                        </li>
+                        <li>
+                            <a href="index.php?route=information/information&amp;information_id=92">CBSL - Customer
+                                Charter</a>
+                        </li>
+                        <li>
+                            <a href="index.php?route=information/information&amp;information_id=115"
+                                target="_blank">Notice on FATCA</a>
+                        </li>
+                    </nav>
+                </div>
+                <div class="col">
+                    <h3>Bank of Ceylon</h3>
+                    <p>No 1, BOC Square, Bank of Ceylon Mawatha,</p>
+                    <p>Colombo 01,Sri Lanka</p>
+                    <p>Tel : +94 11 2446790-811(22 lines)<br>
+                        <span id="tel-2">+94 11 2338741 / 55</span>
+                    </p>
+                    <p>Fax : +94 11 2321160</p>
+                    <p>Email : boc@boc.lk</p>
+                </div>
+            </div>
+        </div>
+        <div id="copyright-row">
+            <div class="container">
+                Privacy & Security | Terms of use © 2022 Bank of Ceylon. All Rights Reserved. Desinged by : DEP9
+            </div>
+        </div>
+    </footer>
+    <aside>
+        <a href="https://cbweb.boc.lk/">
+            <span id="bubble-wrapper"><ion-icon name="chatbubble"></ion-icon></span> Chat Now
+        </a>
+    </aside>
 </body>
+
 </html>
