Revamp footer section

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         </div>
         <div id="copyright-row">
             <div class="container">
-                Privacy & Security | Terms of use © 2022 Bank of Ceylon. All Rights Reserved. Desinged by : DEP9
+                Privacy & Security | Terms of use © 2023 Bank of Ceylon. All Rights Reserved. Desinged by : Pubudu Janith
             </div>
         </div>
     </footer>
