--- a/index.html
+++ b/index.html
@@ -124,7 +124,32 @@
         </div>
         <div class="row">
             <div class="container clearfix">
-                <div class="col"></div>
+                <div id="slider" class="col clearfix">
+                    <div id="slide-1" class="slide">
+                        <a class="prev" href="#slide-6"><ion-icon name="chevron-back-outline"></ion-icon></a>
+                        <a class="next" href="#slide-2"><ion-icon name="chevron-forward-outline"></ion-icon></a>
+                    </div>
+                    <div id="slide-2" class="slide">
+                        <a class="prev" href="#slide-1"><ion-icon name="chevron-back-outline"></ion-icon></a>
+                        <a class="next" href="#slide-3"><ion-icon name="chevron-forward-outline"></ion-icon></a>
+                    </div>
+                    <div id="slide-3"s class="slide">
+                        <a class="prev" href="#slide-2"><ion-icon name="chevron-back-outline"></ion-icon></a>
+                        <a class="next" href="#slide-4"><ion-icon name="chevron-forward-outline"></ion-icon></a>
+                    </div>
+                    <div id="slide-4" class="slide">
+                        <a class="prev" href="#slide-3"><ion-icon name="chevron-back-outline"></ion-icon></a>
+                        <a class="next" href="#slide-5"><ion-icon name="chevron-forward-outline"></ion-icon></a>
+                    </div>
+                    <div id="slide-5" class="slide">
+                        <a class="prev" href="#slide-4"><ion-icon name="chevron-back-outline"></ion-icon></a>
+                        <a class="next" href="#slide-6"><ion-icon name="chevron-forward-outline"></ion-icon></a>
+                    </div>
+                    <div id="slide-6" class="slide">
+                        <a class="prev" href="#slide-5"><ion-icon name="chevron-back-outline"></ion-icon></a>
+                        <a class="next" href="#slide-1"><ion-icon name="chevron-forward-outline"></ion-icon></a>
+                    </div>
+                </div>
                 <div class="col">
                     <ul>
                         <li><a href="https://boc.lk/#_">
