Add warning message

--- a/index.html
+++ b/index.html
@@ -341,6 +341,10 @@
             <span id="bubble-wrapper"><ion-icon name="chatbubble"></ion-icon></span> Chat Now
         </a>
     </aside>
+    <section id="popup">
+        <div id="close-wrapper" onclick="document.querySelector('#popup').style.display = 'none';"><ion-icon name="close-circle"></ion-icon>Close</div>
+        <p>Be aware! This is not the original BOC website. I have developed this design to improve my web designing skills. The whole design and images are copyright to their respective owners.</p>
+    </section>
 </body>
 
 </html>
