Update footer section

--- a/index.html
+++ b/index.html
@@ -298,13 +298,9 @@
                         <li>
                             <a href="index.php?route=information/information&amp;information_id=107">Tender Notices</a>
                         </li>
-                        <!--<li><a href="#">Procurement Notices</a></li>-->
                         <li>
                             <a href="index.php?route=properties/vehicles">Vehicles for Sale</a>
                         </li>
-                        <!--<li>
-            <a href="index.php?route=information/information&information_id=106">Properties for Sale</a>
-            </li> -->
                         <li>
                             <a href="index.php?route=properties/prime">Properties for Sale</a>
                         </li>
@@ -332,7 +328,7 @@
         </div>
         <div id="copyright-row">
             <div class="container">
-                Privacy & Security | Terms of use © 2023 Bank of Ceylon. All Rights Reserved. Desinged by : Pubudu Janith
+                Privacy & Security | Terms of use © 2023 Bank of Ceylon. All Rights Reserved. Desinged by : <a href="https://www.linkedin.com/in/pubudujanith94/" title="View LinkeIn Profile">Pubudu Janith</a>
             </div>
         </div>
     </footer>
